<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:id="@+id/directory_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/run_button"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/run_button"/>
    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/edit_button"/>
    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/delete_button"/>
</LinearLayout>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->
